# tool_rad

./: .clang-format  .gitignore  .pre-commit-config.yaml  .rad  .rad.json  .talo  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  setup.bash
.cache/clangd/index/: App.hpp.E366FC2A64B06A57.idx  App_inl.hpp.9C440DFD16C49698.idx  CLI.hpp.AA15B52A66FFB2AC.idx  Config.hpp.C01541DD3EB50161.idx  ConfigFwd.hpp.CB8D8BD8B39E0DCA.idx  Config_inl.hpp.43BABB66C9F12DFB.idx  Error.hpp.4BB215F93EFB7406.idx  Formatter.hpp.C15715649C1A2AF2.idx  FormatterFwd.hpp.9DDD928F9469DE8D.idx  Formatter_inl.hpp.9026F0B5AEADEB6C.idx  Macros.hpp.2C0106FA3F4E950E.idx  Option.hpp.07AFF3575CCA04EA.idx  Option_inl.hpp.C6D7B1644BBC0EDE.idx  Split.hpp.939B8BEA9F969EBD.idx  Split_inl.hpp.64CE800B7E53AB00.idx  StringTools.hpp.87C9804960A9B1B1.idx  StringTools_inl.hpp.D578C671AF2BD680.idx  TypeTools.hpp.718BC4F40F250B68.idx  Validators.hpp.C9C7BF0390A24F8D.idx  Validators_inl.hpp.F102A074427249DC.idx  Version.hpp.71921A9C31FF3A50.idx  gmock-actions.h.A5C8285984B26ED1.idx  gmock-all.cc.94ECC7E10A90CE3F.idx  gmock-cardinalities.cc.010E9354E6B2AA54.idx  gmock-cardinalities.h.1D54A7D0E34528B0.idx  gmock-function-mocker.h.83D983E6F77A879A.idx  gmock-generated-actions.h.F2FA38E29C2F97C6.idx  gmock-internal-utils.cc.D2683FF4081AFDCB.idx  gmock-internal-utils.h.8342B911B5DB1AB2.idx  gmock-matchers.cc.915372FECE8F0013.idx  gmock-matchers.h.B71851A993EEFD93.idx  gmock-matchers.h.E65CA973A48D4146.idx  gmock-more-actions.h.6AC4FE75F6FFEBDF.idx  gmock-more-matchers.h.BA79334932E65D73.idx  gmock-nice-strict.h.922E2834A777A146.idx  gmock-port.h.3C724CFAFA0F1290.idx  gmock-port.h.B0C7D872CE83AF0F.idx  gmock-pp.h.CE551FBC6479A303.idx  gmock-spec-builders.cc.6D4F2E584C2C4C7C.idx  gmock-spec-builders.h.60FE88023FF4B932.idx  (+39 more)
.devcontainer/: devcontainer.json
docs/adr/: ADR0001-record-architecture-decisions.md  ADR0002-require-an-initialization-subcommand-to-configure-rad-for-a-directory.md  ADR0003-.rad-file-contains-the-configuration-for-rad.md  ADR0004-have-a-class-to-manage-the-config-file.md  ADR0005-rad-can-create-adrs-with-add.md  ADR0005-utilize-json-over-yaml.md  ADR0006-adrs-are-in-the-nygard-format.md  ADR0007-recursively-move-back-through-parent-directories-to-find-.rad.json-files.md  ADR_10_adrs-will-inherit-from-a-base-markdown-class.md  ADR_11_validate-config-file-with-a-json-schema.md  ADR_11_validate-config-file-with-json-schema-prior-to-executing-code.md  ADR_8_migrate-from-talo-to-rad.md  ADR_9_ensure-that-there-is-verbose-output-when-adding-adrs.md
src/: CMakeLists.txt  main.cpp
src/adrs/: CMakeLists.txt  adrs.cpp  adrs.h  nygard.cpp
src/classes/: CMakeLists.txt  configFile.cpp  configFile.h  files.cpp  files.h  nygardADR.h
src/config/: CMakeLists.txt  configFile.cpp  configFile.h
src/markdown/: CMakeLists.txt  markdown.cpp  markdown.h
tests/: CMakeLists.txt  test_ADR.cpp  test_ConfigFile.cpp  test_ConfigFile[1]_include.cmake  test_ConfigFile[1]_tests.cmake  test_Markdown.cpp  test_NygardADR.cpp
